Fix workflows